2002-10-18  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/shapelst.cc,etc:  Keep shape browsers around so that
	they're at the same spot and selection when you return to them.

2002-10-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/exult_studio.glade: East is a direction too :-)
	* objs/egg.cc: use shape 200, frame 1-5 for new missile eggs
	* mapedit/exult_studio.glade: removed tabs from two names
	* mapedit/exult_studio.glade: made egg_window notebook unscrollable,
	since the scrollable option is apparently broken in windows

2002-10-10  Max Horn  <max@quendi.de>

	* Info.plist.in: No .nib file used anymore
	* configure.in: Removed some unnecessary flags on MacOS X
	* audio/midi_drivers/mac_midi.cc: Use assert() instead of DebugStr()
	* gumps/AudioOptions_gump.cc: Work around a compiler bug on MacOS X

2002-10-10  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/execbox.cc (Exec_process): Split off separate class to
	handle the plotform-dependend exec'ing.

2002-10-08  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/execbox.cc,compile.cc:  Added a 'compile' window for
	running the usecode compiler and seeing the errors.

2002-10-07  Max Horn  <max@quendi.de>

	* data/credits.txt: Jackchaos.com hosted the old forum
	* several files: got rid of #pragma implementation/interface - it didn't
	  help us much anyway but triggered a compiler error on MacOS X
	* many files: get rid of using std::snprintf - according to the standard,
	  snprintf is *not* in namespace std

2002-09-29  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Get_distance() looks at owners of objs.
	This fixes the bug with selling the bread you bake in BG.

2002-09-24  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Guessing 'npc_nearby2()'.  Fixes
	Moonshade bug where companions don't show up to the trial.

2002-09-21  Jeff Freedman  <jeff@amy.nerble.net>

	* pathfinder/*:  GetNextStep returns a 'done' flag if the tile